cmake_minimum_required( VERSION 3.0 )

add_subdirectory("Hello World")
add_subdirectory("Basic Data Types")
add_subdirectory("Pointer")
add_subdirectory("Conditional Statements")
add_subdirectory("For Loop")
add_subdirectory("Functions")
add_subdirectory("Arrays Introduction")
add_subdirectory("Input and Output")
